sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:8: error: not found: value isSamller
      if (!isSamller(i,i+1)) {
           ^AlgCocktailSort1:14: error: not found: value isSamller
      if (!isSamller(i,i+1)) {
           ^