sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var finished:Boolean= true;
  var n:Int = getValueCount();
  do{
    finished = true;
    for (i<-0 to n-2) {
      if (!isSamller(i,i+1)) {
        swap(i,i+1);
        finished = false;
      }
    }
    for (i<- n-2 to 0) {
      if (!isSamller(i,i+1)) {
        swap(i,i+1);
        finished = false;
    	}
  	}
	} while (!finished)
}